tests/errors/math_pow_mod_bad_args_panics.ptt
use std/math

spark {
  yell(math.pow_mod(2, 3, 0))
}
